--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,11 +1,10 @@
-a{
-    text-decoration: none;
-    color: inherit;
+a {
+  text-decoration: none;
+  color: inherit;
 }
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-body{
-    font-family: 'Lexend Deca', sans-serif;
+body {
+  font-family: "Lexend Deca", sans-serif;
 }
-
