--- a/src/styles/calendar.css
+++ b/src/styles/calendar.css
@@ -1,5 +1,6 @@
 .react-calendar {
     width: 350px;
+    border-radius: 10px;
     max-width: 100%;
     background: white;
     border: 1px solid #a0a096;
@@ -30,6 +31,9 @@
     border: 0;
     outline: none;
   }
+  .react-calendar_tile button {
+    color: white;
+  }
   .react-calendar button:enabled:hover {
     cursor: pointer;
   }
@@ -39,7 +43,9 @@
   }
   .react-calendar__navigation button {
     min-width: 44px;
+    font-size: 18px;
     background: none;
+    color: #f0f0f0;
   }
   .react-calendar__navigation button:enabled:hover,
   .react-calendar__navigation button:enabled:focus {
@@ -67,11 +73,14 @@
     font-size: 0.75em;
     padding: calc(0.75em / 0.75) calc(0.5em / 0.75);
   }
+  .react-calendar__month-view__days__day {
+    color: #fff;
+  }
   .react-calendar__month-view__days__day--weekend {
     color: #d10000;
   }
   .react-calendar__month-view__days__day--neighboringMonth {
-    color: #757575;
+    color: #868686;
   }
   .react-calendar__year-view .react-calendar__tile,
   .react-calendar__decade-view .react-calendar__tile,
@@ -99,7 +108,7 @@
     background: #ffffa9;
   }
   .react-calendar__tile--hasActive {
-    background: #76baff;
+    background: #81b71a;
   }
   .react-calendar__tile--hasActive:enabled:hover,
   .react-calendar__tile--hasActive:enabled:focus {
@@ -111,7 +120,7 @@
   }
   .react-calendar__tile--active:enabled:hover,
   .react-calendar__tile--active:enabled:focus {
-    background: #1087ff;
+    background: #81b71a;
   }
   .react-calendar--selectRange .react-calendar__tile--hover {
     background-color: #e6e6e6;
